# opencvAndroid

./: import-summary.txt  settings.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/leyline/computervision/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/leyline/opencvandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/leyline/computervision/: MainActivity.kt
app/src/main/java/com/leyline/computervision/opencv/: NativeClass.kt  OpenCvActivity.kt
app/src/main/java/com/leyline/opencvandroid/: MainActivity.java
app/src/main/java/com/leyline/opencvandroid/openCV/: NativeClass.java  OpenCvActivity.java
app/src/main/res/layout/: activity_main.xml  activity_open_cv.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/leyline/computervision/: ExampleUnitTest.kt
app/src/test/java/com/leyline/opencvandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
java/: build.gradle
java/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
